- AH prices are no longer retrieved for loot since Allakhazam is no
  longer in service and Wowhead's prices seem useless usually.
- The Health/Mana Chart tab no longer displays the yellow target
  health line at 0% when there is no target.
- Corrected level cap to 85, it should work at 90, 95, etc.
- Made *many* improvements to the built-in webserver including a mobile
  device friendly version.

Version 0.18
------------
- Added Death Knight support.
- Fixed health/mana display for users where a comma is used 
  instead of a period for a decimal point.
- Updated Allakhazam item XML URL so item info is retrieved again.

Version 0.17
------------
- Fixed Parse Log File dialog box and added a progress bar
  if the log file is very large.
- Added maximized/fullscreen option to the Screenshot menu.
  F11 toggles in and out of fullscreen mode.
- Fixed extraneous 1 pixel border around the health/mana chart
  that really pissed me off....
- Fixed combat log after 2.4 changes.
- Right clicking anywhere on the health/mana chart will display
  a popup menu where you can disable drawing the mana line.

Version 0.16
------------
- Added a bunch of options to control alerts. See the Alerts
  configuration tab.
- Added ability to retrieve item's mediam AH price instead of
  vendor price based on its name or quality. See the Loot
  configuration tab.
- A spiffy help file is now distributed with JGlideMon.
- A spiffy installer is now available for Windows.

Version 0.15
------------
- Multiple Glider support is finally available. You no longer need
  to run separate copies of JGlideMon to monitor multiple Gliders.
  This functionality is accessible via the Servers menu.
- You can now change JGlideMon's icon that appears in the tray
  and the taskbar.
- The configuration settings have been converted to Java's
  built in Properties type. Your JGlideMon.ini will automatically
  be converted to JGlideMon.properties.
- The Stuck configuration tab has been renamed Restarter.