@@ -22,6 +22,7 @@ servers.0.net.host=localhost
 servers.0.net.password=
 servers.0.net.port=3200
 
+servers.0.window.chattype=WHISPER
 servers.0.window.maximized=true
 servers.0.window.x=50
 servers.0.window.y=50
@@ -30,6 +31,7 @@ servers.0.window.height=650
 
 servers.0.web.enabled=false
 servers.0.web.port=3201
+servers.0.web.readonly=false
 
 web.updateinterval=5000
 
